3438: added check when loading the next/previous question to make sure it is not out of bounds

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10965,6 +10965,9 @@ video {
 .absolute{
   position: absolute;
 }
+.\!absolute{
+  position: absolute !important;
+}
 .relative{
   position: relative;
 }
@@ -11541,6 +11544,9 @@ video {
 .mt-px{
   margin-top: 1px;
 }
+.mt-\[45px\]{
+  margin-top: 45px;
+}
 .box-border{
   box-sizing: border-box;
 }
@@ -11757,6 +11763,9 @@ video {
 }
 .h-screen{
   height: 100vh;
+}
+.h-\[calc\(100vh-70px\)\]{
+  height: calc(100vh - 70px);
 }
 .max-h-0{
   max-height: 0px;
@@ -12028,6 +12037,9 @@ video {
 }
 .w-px{
   width: 1px;
+}
+.w-\[55px\]{
+  width: 55px;
 }
 .min-w-\[110px\]{
   min-width: 110px;
@@ -12705,6 +12717,9 @@ video {
 }
 .self-center{
   align-self: center;
+}
+.justify-self-end{
+  justify-self: end;
 }
 .overflow-auto{
   overflow: auto;
@@ -13657,6 +13672,9 @@ video {
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
+}
+.text-\[16px\]{
+  font-size: 16px;
 }
 .font-bold{
   font-weight: 700;
