--- a/public/css/app_pdf.css
+++ b/public/css/app_pdf.css
@@ -5774,6 +5774,9 @@ video {
 .absolute{
   position: absolute;
 }
+.\!absolute{
+  position: absolute !important;
+}
 .relative{
   position: relative;
 }
@@ -6350,6 +6353,9 @@ video {
 .mt-px{
   margin-top: 1px;
 }
+.mt-\[45px\]{
+  margin-top: 45px;
+}
 .box-border{
   box-sizing: border-box;
 }
@@ -6566,6 +6572,9 @@ video {
 }
 .h-screen{
   height: 100vh;
+}
+.h-\[calc\(100vh-70px\)\]{
+  height: calc(100vh - 70px);
 }
 .max-h-0{
   max-height: 0px;
@@ -6837,6 +6846,9 @@ video {
 }
 .w-px{
   width: 1px;
+}
+.w-\[55px\]{
+  width: 55px;
 }
 .min-w-\[110px\]{
   min-width: 110px;
@@ -7514,6 +7526,9 @@ video {
 }
 .self-center{
   align-self: center;
+}
+.justify-self-end{
+  justify-self: end;
 }
 .overflow-auto{
   overflow: auto;
@@ -8466,6 +8481,9 @@ video {
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
+}
+.text-\[16px\]{
+  font-size: 16px;
 }
 .font-bold{
   font-weight: 700;
